# trellio-mcp

./: README.md  SECURITY.md  pyproject.toml  server.json  smithery.yaml
docs/: 2026-04-12-security-and-quality-audit.md  case-study-bdd-mcp-server.md  tool-design.md
docs/adr/: 001-mcp-sdk-and-language.md  002-transport-protocol.md  003-authentication-configuration.md  004-tool-granularity.md  005-trellio-integration.md  006-mcp-capabilities.md  007-error-handling-strategy.md
features/: attachments.feature  auth.feature  board_overview.feature  boards.feature  cards.feature  checklists.feature  comments.feature  download_attachment.feature  environment.py  errors.feature  labels.feature  lists.feature  members.feature  prompts.feature  resources.feature  search.feature  upload_attachment.feature  webhooks.feature
features/steps/: archive_steps.py  attachment_steps.py  auth_steps.py  board_overview_steps.py  board_steps.py  card_steps.py  checklist_steps.py  comment_steps.py  common_steps.py  download_attachment_steps.py  error_steps.py  label_steps.py  list_steps.py  member_steps.py  prompt_steps.py  resource_steps.py  search_steps.py  upload_attachment_steps.py  webhook_steps.py
src/trello_mcp/: __init__.py  __main__.py  auth.py  errors.py  prompts.py  resources.py  server.py
src/trello_mcp/tools/: attachments.py  boards.py  cards.py  checklists.py  comments.py  labels.py  lists.py  members.py  search.py  validation.py  webhooks.py
