[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trello-mcp"
version = "0.1.0"
description = "MCP server for Trello via trellio"
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
dependencies = [
    "mcp>=1.12.0",
    "trellio @ git+https://github.com/scaratec/trellio.git@v1.0.0",
]

[project.optional-dependencies]
dev = [
    "behave>=1.2.6",
]

[tool.setuptools.packages.find]
where = ["src"]
